fix: align footer

--- a/index.css
+++ b/index.css
@@ -1411,6 +1411,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  width: 100%;
   gap: 1rem;
 }
 
